[selectors] :focus should match inside the focus event https://bugs.webkit.org/show_bug.cgi?id=220243

Reviewed by Frédéric Wang.

LayoutTests/imported/w3c:

Import focus-in-focus-event-001.html test from WPT.
Rebaseline 2 tests:
- focus-autofocus.html now passes after fixing this bug.
- focus-visible-005.html now fails, but it was passing because it was not checking anything due to this bug.

* web-platform-tests/css/selectors/focus-in-focus-event-001-expected.txt: Added.
* web-platform-tests/css/selectors/focus-in-focus-event-001.html: Added.
* web-platform-tests/css/selectors/focus-visible-005-expected.txt: Rebaseline.
* web-platform-tests/css/selectors/w3c-import.log:
* web-platform-tests/html/semantics/selectors/pseudo-classes/focus-autofocus-expected.txt: Rebaesline.

Source/WebCore:

Before this patch this was working different in WebKit than Chromium and Firefox.
The specs are clear about the expected behavior for this:
- From https://drafts.csswg.org/selectors-4/#the-focus-pseudo:
  "The :focus pseudo-class applies while an element has the focus"
- From https://w3c.github.io/uievents/#event-type-focus:
  "The focus MUST be given to the element before the dispatch of this event type"

A similar fix has been done on Blink in r201118 by <kochi@chromium.org>
(https://chromium.googlesource.com/chromium/src/+/cc49a6966f5ae6d89e86fbd3f53e4deea4e066ca).

Test: imported/w3c/web-platform-tests/css/selectors/focus-in-focus-event-001.html

* dom/Document.cpp:
(WebCore::Document::setFocusedElement): Just moved the call to m_focusedElement->setFocus(true)
right before dispatching the events.

LayoutTests:

* TestExpectations: Skip some :focus-visible tests as current failure results
depend on the platform.
This issue has been fixed upstream in https://github.com/web-platform-tests/wpt/pull/27041
and these tests will be re-imported and unskipped in a follow-up patch.


Canonical link: https://commits.webkit.org/232743@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271146 268f45cc-cd09-0410-ab3c-d52691b4dbfc